--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
 .box {
   padding: 6px;
   width: 250px;
-  height: 250px;
+  height: 500px;
   overflow: auto;
   background: rgb(21, 20, 20);
   margin: 10px;
@@ -48,10 +48,11 @@
 
 .box p {
   background: rgb(94, 0, 123);
-  padding: 8px;
-  display: inline-block;
   color: #fff;
-  border-radius: 15px;
+  height: 50px;
+  width: 100%;
+  text-align: center;
+  line-height: 50px;
 }
 
 .names li {
